--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+NEC-PCE-IFU-30-backups
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -24,3 +25,7 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+# no layout
+NEC-PCE-IFU-30.kicad_pcb
+
